<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hari"
        android:id="@+id/editHari"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textColorHint="@color/black"
        android:autofillHints=""
        android:inputType="text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/catatan"
        android:id="@+id/editCatatan"
        android:textSize="18sp"
        android:layout_below="@id/editHari"
        android:textColor="@color/black"
        android:inputType="textImeMultiLine"
        android:textColorHint="@color/black"
        android:autofillHints=""
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah"
        android:layout_below="@id/editCatatan"
        android:id="@+id/btnTambah"/>


</RelativeLayout>