<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".Login">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/gambar"
        android:background="@drawable/ic_baseline_adb_24"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/logins"
        android:layout_below="@id/gambar"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/edtNoHP2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/no_hp"
        android:inputType="number"
        android:layout_below="@id/logins"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/edtNoHP2"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:id="@+id/edtPassword"
        android:textColorHint="@color/black"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/log_in"
        android:id="@+id/btnLogin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/register"
        android:layout_below="@id/btnLogin"
        android:id="@+id/btnRegister"/>



</RelativeLayout>