<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/canvas"
    android:layout_margin="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/canv"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hari"
            android:id="@+id/editHari1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"
            android:autofillHints=""
            android:inputType="text" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/catatan"
            android:id="@+id/editCatatan1"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:inputType="textImeMultiLine"
            android:textColorHint="@color/black"
            android:autofillHints="" />

    </LinearLayout>


    <Button
        android:id="@+id/btnEdit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/canv"
        android:text="@string/edit" />


</RelativeLayout>