<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hari"
                android:id="@+id/txtHari"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:id="@+id/txtCatatan"
                android:text="@string/catatsaddsaadsdsadsadsadsaasddasdsaadsdsaadsadssadadsan"
                android:maxLines="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_edit_24"
                android:layout_margin="10dp"
                android:id="@+id/btnEdit"
                android:contentDescription="@string/edit" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_cancel_24"
                android:layout_marginStart="10dp"
                android:id="@+id/btnHapus"
                android:contentDescription="@string/hapus" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>